Add name to HASE

--- a/src/main/resources/assets/horsearmorstandmod/lang/en_us.json
+++ b/src/main/resources/assets/horsearmorstandmod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.horsearmorstandmod.horsearmorstanditem": "Horse Armor Stand"
+  "item.horsearmorstandmod.horsearmorstanditem": "Horse Armor Stand",
+  "entity.horsearmorstandmod.horsearmorstandentity": "Horse Armor Stand"
 }
